--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Alert.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Alert.storyboard
@@ -3,6 +3,7 @@
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -61,7 +62,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.96078431372549022" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" name="journalColor"/>
                         <constraints>
                             <constraint firstItem="nyK-HM-0dG" firstAttribute="trailing" secondItem="qbX-1D-70z" secondAttribute="trailing" id="6tW-cn-xsW"/>
                             <constraint firstItem="Ucf-jW-pTy" firstAttribute="trailing" secondItem="nyK-HM-0dG" secondAttribute="trailing" id="AMd-69-XzQ"/>
@@ -91,5 +92,8 @@
     </scenes>
     <resources>
         <image name="noticeMathBtnSubjectsection" width="12" height="7"/>
+        <namedColor name="journalColor">
+            <color red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
