--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Notes.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Notes.storyboard
@@ -150,7 +150,7 @@
                                                 </constraints>
                                             </stackView>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.96078431372549022" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" name="journalColor"/>
                                         <constraints>
                                             <constraint firstItem="wzN-e3-WOp" firstAttribute="centerY" secondItem="5zZ-eP-SYD" secondAttribute="centerY" id="P3X-ru-MSw"/>
                                             <constraint firstAttribute="height" constant="74" id="rJ7-M4-gBV"/>
@@ -162,11 +162,11 @@
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="M9O-bg-GAs">
                                 <rect key="frame" x="0.0" y="285" width="375" height="527"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" name="journalColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="527" id="kou-JD-LQN"/>
                                 </constraints>
-                                <color key="sectionIndexBackgroundColor" name="ColorBackgorund"/>
+                                <color key="sectionIndexBackgroundColor" name="journalColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalDataCell" id="iM5-Xg-hMy" customClass="JournalDataCell" customModule="TutorDot_iOS" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="169"/>
@@ -272,7 +272,7 @@
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.96078431372549022" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="backgroundColor" name="journalColor"/>
                                             <constraints>
                                                 <constraint firstItem="rrk-uY-Lqq" firstAttribute="leading" secondItem="kBf-hA-HHA" secondAttribute="trailing" constant="21" id="Dok-MM-Ula"/>
                                                 <constraint firstAttribute="trailing" secondItem="rrk-uY-Lqq" secondAttribute="trailing" constant="20" id="Gkz-g8-9cE"/>
@@ -282,7 +282,7 @@
                                                 <constraint firstItem="rrk-uY-Lqq" firstAttribute="top" secondItem="xrR-BF-dIc" secondAttribute="top" constant="10" id="pnt-Cf-8Wc"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" name="ColorBackgorund"/>
+                                        <color key="backgroundColor" name="journalColor"/>
                                         <connections>
                                             <outlet property="classColorImage" destination="kBf-hA-HHA" id="tS3-9H-BBP"/>
                                             <outlet property="currentClassTitleLabel" destination="NgU-Jc-Qp7" id="Y5t-Yr-sAR"/>
@@ -298,7 +298,7 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" name="ColorBackgorund"/>
+                        <color key="backgroundColor" name="journalColor"/>
                         <constraints>
                             <constraint firstItem="M9O-bg-GAs" firstAttribute="leading" secondItem="MCp-pP-N3j" secondAttribute="leading" id="3aL-lQ-jN5"/>
                             <constraint firstItem="0FM-gv-Njd" firstAttribute="trailing" secondItem="MCp-pP-N3j" secondAttribute="trailing" id="5dC-jR-7IB"/>
@@ -471,7 +471,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="GUk-GR-POH" firstAttribute="top" secondItem="71s-lu-caA" secondAttribute="bottom" constant="329" id="143-ss-LfH"/>
                             <constraint firstItem="YdC-6S-Des" firstAttribute="trailing" secondItem="GUk-GR-POH" secondAttribute="trailing" constant="20" id="3oX-zS-ayz"/>
@@ -529,6 +529,9 @@
         </namedColor>
         <namedColor name="ColorBackgorund">
             <color red="0.96078431372549022" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="journalColor">
+            <color red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
